# Connectomics

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cx-report  cx-topology  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/: cloud.yaml
.github/workflows/: ci.yml
configs/: ci.yaml
connectomics/: __init__.py  _matrix.py  dyn_opt.py  effective.py  paths.py  reporting.py  signed_blocks.py
connectomics_gui/: __init__.py  annotations.py  app.py
data/: connectivity.csv  cx_streams.csv  state_seeds.csv
scripts/: ci_cli.py
src/connectomics_cli/: __init__.py  auth.py  cli.py  config.py  materialization.py  synapse_analysis.py
src/connectomics_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cx_connectome/: __init__.py  adjacency.py  annotations.py  cave_io.py  chemistry.py  constants.py  cx_network.py  functional_roles.py  idtools.py  motifs.py  pipeline.py  projection.py  report.py  topology.py  upstream.py
src/cx_connectome/ci/: __init__.py  cx_integration.py  dynamics.py  effective.py  io_utils.py  metrics.py  optimize.py  paths.py  rfc.py  signed.py  state_overlay.py  subgraph.py
src/cx_connectome/ci/data/: cx_baseline_annotations.json
src/cx_connectome/legacy/: __init__.py  adjacency_tracer.py  topology_analyzer.py
tests/: conftest.py  test_adjacency.py  test_annotations.py  test_cli.py  test_constants.py  test_effective.py  test_functional_roles.py  test_graph_construction.py  test_metrics.py  test_smoke.py  test_synapse_analysis.py  test_topology.py
tests/ci/: test_dyn_opt.py  test_effective_equivalence.py  test_paths.py  test_placeholder.py  test_signed_blocks.py
tests/data/: golden_synapse_summary.csv  id_updates.csv  overlaps.csv  path_adjacency.csv  synapses.csv
